@@ -1,3 +1,8 @@
+2014-05-03  Oleg Endo  <olegendo@gcc.gnu.org>
+
+	* config/sh/sh-mem.cc: Use tabs instead of spaces.
+	(prob_unlikely, prob_likely): Make variables const.
+
 2014-05-03  Denis Chertykov  <chertykov@gmail.com>
 
 	* config/avr/avr.c (avr_adjust_insn_length): Handle JUMP_TABLE_DATA.
